# ndc-tracking

./: .gitignore  IMPLEMENTATION_SUMMARY.md  implementation_plan.md  pyproject.toml
server/: .env.sample  .gitignore  README.md  alembic.ini  backfill_dates.py  database.py  init_db.py  init_emails.py  main.py  migrate_fnf.py  pyproject.toml  query_ndc_completed.py  run_fnf_active_report.py  run_ingest.py  seed_users.py  test_silent_logs.py
server/Email/: cron_daemon.py  mail.py
server/alembic/: env.py
server/alembic/versions/: b3351151a5d8_initial_sync.py
server/app/auth/: jwt_bearer.py  jwt_handler.py
server/app/dto/: auth.py  common.py  email.py  employee_email_master.py  rm_email_configuration.py
server/app/helpers/: excel_parser.py  status_mapper.py
server/app/models/: __init__.py  email_recipient.py  employee_email_master.py  ndc_approval.py  ndc_auth_audit_log.py  ndc_record.py  ndc_user_access.py  rm_email_configuration.py  upload_batch.py
server/app/routers/: auth.py  common_api.py  email_api.py  employee_email_master_api.py  ff.py  ff_api.py  frontend_api.py  ingest.py  rm_email_configuration_api.py
server/app/schemas/: common.py  frontend.py  ndc.py
server/app/services/: analytics_service.py  common_service.py  email_service.py  employee_email_master_service.py  excel_parser.py  export_service.py  ingest_service.py  sharepoint_service.py  (+2 more)
server/config/: database.py  logger.py
server/docs/: api_documentation.md  dashboard_api_endpoints.md  migration_v1_auth.sql
server/scripts/: manual_sync.py  sync_db.py
server/spa_server/: router.py
(+88 files in other folders)
