[project]
name = "ndc-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.12.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "lxml>=5.1.0",
    "msal>=1.37.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.28.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.30",
    "pyxlsb>=1.0.10",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]
